# n-body-simulation

./: .gitignore  .hintrc  README.md  index.html  pyproject.toml
app/: main.py
app/frontend/: replay_viewer.html
app/static/: index.html
app/tabs/: replay.py  run.py
data/: leapfrog.json  test1.json  test3final.json  test_probe.json  test_probe2.json
